--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
